crates/swc_ts_fast_strip/tests/errors/assertion-associativity-as.ts
const value = 1 ** 1 as number ** 2;